# 2023-autumn-ab-python-ads-hw-7-Ballr0g

./: .env  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build_docker.yaml  lint_and_test_on_push.yaml
app/: __init__.py  database.py  main.py  model_estimate.py  model_predict.py  models.py  schemas.py
tests/: test_main.py
